Update firefox searchplugin and my.cnf

--- a/rc/.my.cnf
+++ b/rc/.my.cnf
@@ -4,4 +4,7 @@ prompt="(\\u:@\\h:\R:\m:\\s)[\\d]> "
 [mysqld]
 character-set-server		= utf8
 default-character-set		= utf8
+collation_server=utf8_unicode_ci
+default-collation=utf8_unicode_ci
+skip-character-set-client-handshake
 skip-networking
