--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "zsh/zsh-syntax-highlighting"]
 	path = zsh/zsh-syntax-highlighting
 	url = git://github.com/nicoulaj/zsh-syntax-highlighting.git
+[submodule "zsh/git-flow-completion"]
+	path = zsh/git-flow-completion
+	url = git://github.com/bobthecow/git-flow-completion.git
